--- a/ThreadTest/ThreadTest/ThreadTest.vcxproj.filters
+++ b/ThreadTest/ThreadTest/ThreadTest.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="ThreadPool.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ThreadPoolLogger.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThreadPool.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadPoolLogger.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="LogMessages.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
